tests/errors/binding/event.fil
comp Add<'G:1>(in: ['T, 'T+1] 32) -> () {}